Revision history for Perl extension CGI::Header.

0.19  Feb 11th, 2013

  Add CGI::Header::PSGI which exports two methods on demand: psgi_header()
  and psgi_redirect().

    use parent 'CGI';
    use CGI::Header::PSGI qw(psgi_header psgi_redirect);

  CGI::Header::PSGI helps you create your own CGI::PSGI-compatible class.

  [INCOMPATIBLE CHANGES]

    - rehash() and new() rename '-uri' and '-url' to '-location'

    - flatten() and each() stringify CGI::Cookie objects by default.

0.18  Feb 9th, 2013

  - You can pass a media type to new() in the following situation:

      my $h = CGI::Header->new('text/plain');
      $h->header; # => { -type => 'text/plain' }

  - new() throws an exception in the following situation:

      my $h = CGI::Header->new( -foo => 'bar', '-baz' );
      # die "Odd number of elements in hash assignment"

  [STATE OF THIS MODULE]

    The following methods are unstable:

      - $h->set( 'Content-Type => $value )
      - $h->set( 'P3P' => $value )
      - $h->set( 'Expires' => $value )

        I'm not sure about how to process these headers properly at this time.

0.17  Jan 18th, 2013

  [DOCUMENTATION]

    - Add "EXAMPLES" and "DEPENDENCIES"

  [INTERNALS]

    - Fix META.yml ("version" was broken)

0.16  Jan 14th, 2013

  [INCOMPATIBLE CHANGES]

    - rehash() throws an exception when a property name is duplicated:

        my $header = {
            -Type        => 'text/plain',
            Content_Type => 'text/html',
        };

        my $h = CGI::Header->new( $header );
        $h->rehash; # die "Property '-type' already exists"

      If it was allowed to overwrite existent properties,
      it would be essentially impossible to predict 
      the overwritten value of '-type' in the above example:

        $h->header->{-type}; # => 'text/html' or 'text/plain' ?

    - In addition to CGI.pm-compatible HTTP header properties,
      new() accepts '-env' property which represents your current environment:
